[package]
name = "px-linkme"
version = "0.3.33"
authors = ["David Tolnay <dtolnay@gmail.com>","gkgoat"]
categories = ["development-tools::build-utils", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc"]
description = "Safe cross-platform linker shenanigans"
documentation = "https://docs.rs/px-linkme"
edition = "2021"
keywords = ["linkage"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/portal-co/linkme"
rust-version = "1.62"

[[test]]
name = "module_2015"
edition = "2015"

[features]
used_linker = ["linkme-impl/used_linker"]

[dependencies]
linkme-impl = { version = "0.3.33", path = "impl", package = "px-linkme-impl" }

[target.'cfg(target_family = "wasm")'.dependencies]
once_cell = "1.20.2"


[dev-dependencies]
once_cell = "1.16"
rustversion = "1.0"
trybuild = { version = "1.0.97", features = ["diff"] }

[workspace]
members = ["impl", "tests/cortex", "tests/crate"]

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
